# mjolnir

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  bot.py
app/cogs/: admin.py  watcher.py
app/core/: __init__.py  logging.py  models.py  rules.py  store.py
tests/: test_admin.py  test_rules.py  test_watcher.py
